# BMP_Analyser

./: CMakeLists.txt  DPCM.h  PSNR.h  README.md  YCbCr.h  correlation.h  decimation.h  entropy.h  histogram.h  imageToRGBChannels.h  main.cpp  pixels.h  subImages.h
